# Inventory-System-Backend

./: .env  .flake8  .gitignore  README.md  inventory.db.bak.1779356809  mypy.ini  pyproject.toml
alembic/: .env  .env.example  env.py
alembic/versions/: 2354185b45bf_initial.py  b81d52ab9817_initial_migration.py
app/: check_tables.py  dependencies.py  main.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py  inventory.py  products.py  purchase.py  reports.py  sales.py  users.py
app/core/: celery_app.py  config.py  constants.py  database.py  exception_handlers.py  oauth.py  security.py
app/models/: __init__.py  audit_logs.py  inventory.py  product.py  purchase.py  role.py  sales.py  stock_transaction.py  user.py
app/repositories/: base.py  inventory_repo.py  product_repo.py  purchase_repo.py  role_repo.py  sales_repo.py  stock_repo.py  user_repo.py
app/schemas/: __init__.py  auth.py  inventory.py  product.py  purchase.py  sales.py  user.py
app/scripts/: creating_users.py
app/services/: audit_service.py  auth_service.py  inventory_service.py  product_service.py  purchase_service.py  report_service.py  sales_service.py  stock_service.py  user_service.py
app/tasks/: debug.py  inventory.py  purchase.py  reports.py  sales.py
app/tests/: test_auth.py  test_inventory.py  test_sales.py  tests_product.py
app/utils/: api_guard.py  pagination.py  reset_db.py  seed.py
