[project]
name = "inventory-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "authlib>=1.7.0",
    "bcrypt==4.0.1",
    "celery[redis]>=5.6.3",
    "email-validator>=2.3.0",
    "fastapi>=0.136.0",
    "flower>=2.0.1",
    "httpx>=0.28.1",
    "kombu>=5.6.2",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "pyamqp>=0.1.0.7",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.26",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.45.0",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "flake8>=7.3.0",
    "httpx>=0.28.1",
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]

[tool.uv]
link-mode = "copy"
